--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Harish S - UI/UX Designer and Frontend Developer Portfolio">
-  <title>Harish S | UI/UX Designer & Frontend Developer</title>
-  <link rel="icon" type="image/jpg" href="./images/profile.jpg">
-  <link rel="apple-touch-icon" href="./images/profile.jpg">
+  <title>Britto  Y</title>
+  <link rel="icon" type="image/jpg" href="./images/britto.jpg">
+  <link rel="apple-touch-icon" href="./images/britto.jpg">
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
