--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Harish S - UI/UX Designer and Frontend Developer Portfolio">
-  <title>Britto  Y</title>
-  <link rel="icon" type="image/jpg" href="./images/britto.jpg">
-  <link rel="apple-touch-icon" href="./images/britto.jpg">
+  <meta name="description" content="Britto Portfolio">
+  <title>Britto Y</title>
+  <link rel="icon" type="image/jpg" href="./images/profile.jpg">
+  <link rel="apple-touch-icon" href="./images/profile.jpg">
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -57,10 +57,10 @@
             </a>
           </div>
           <div class="social-links">
-            <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank" rel="noopener noreferrer" class="social-btn">
+            <a href="https://www.linkedin.com/in/britto-britto-95594128b/" target="_blank" rel="noopener noreferrer" class="social-btn">
               <i class="fab fa-linkedin"></i>
             </a>
-            <a href="https://github.com/YOUR-GITHUB" target="_blank" rel="noopener noreferrer" class="social-btn">
+            <a href="https://github.com/britto101" target="_blank" rel="noopener noreferrer" class="social-btn">
               <i class="fab fa-github"></i>
             </a>
             <a href="mailto:arokiyabritto307@gmail.com" class="social-btn">
@@ -170,11 +170,11 @@
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="400">
             <i class="fab fa-linkedin"></i>
-            <p>LinkedIn : <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank">linkedin.com/in/YOUR-LINKEDIN</a></p>
+            <p>LinkedIn : <a href="https://www.linkedin.com/in/britto-britto-95594128b/" target="_blank">linkedin.com/in/YOUR-LINKEDIN</a></p>
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="500">
             <i class="fab fa-github"></i>
-            <p>GitHub : <a href="https://github.com/YOUR-GITHUB" target="_blank">github.com/YOUR-GITHUB</a></p>
+            <p>GitHub : <a href="https://github.com/britto101" target="_blank">github.com/YOUR-GITHUB</a></p>
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="600">
             <i class="fas fa-map-marker-alt"></i>
