--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="400">
             <i class="fab fa-linkedin"></i>
-            <p>LinkedIn : <a href="https://www.linkedin.com/in/britto-britto-95594128b/" target="_blank">linkedin.com/in/YOUR-LINKEDIN</a></p>
+            <p>LinkedIn : <a href="https://www.linkedin.com/in/britto-britto-95594128b/" target="_blank">https://www.linkedin.com/in/britto-britto-95594128b</a></p>
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="500">
             <i class="fab fa-github"></i>
-            <p>GitHub : <a href="https://github.com/britto101" target="_blank">github.com/YOUR-GITHUB</a></p>
+            <p>GitHub : <a href="https://github.com/britto101" target="_blank">https://github.com/britto101</a></p>
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="600">
             <i class="fas fa-map-marker-alt"></i>
@@ -206,7 +206,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2024 Harish S • Crafted with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i>  | All rights reserved</p>
+      <p>&copy; 2024 Britto Y | All rights reserved</p>
     </div>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
